# rag-platform-on-kubernetes

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  requirements.txt
app/api/: main.py
architecture/: architecture.mmd
argocd/: application.yaml
docs/: architecture.md  deployment.md
docs/runbooks/: deployment.md
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
kubernetes/base/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
kubernetes/overlays/dev/: kustomization.yaml
kubernetes/overlays/production/: kustomization.yaml
kubernetes/overlays/staging/: kustomization.yaml
monitoring/: servicemonitor.yaml
monitoring/grafana/: dashboard.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: rag-platform.yml
src/rag_platform/: __init__.py  config.py  embeddings.py  generator.py  ingestion.py  logging_config.py  main.py  models.py  retriever.py  service.py  vectorstore.py
terraform/: main.tf
tests/: test_health.py  test_platform.py  test_service.py
